<resources>
    <string name="app_name">MeuImc</string>
    <string name="hint_weight">Informe seu peso</string>
    <string name="hint_height">Informe sua altura</string>
    <string name="btn_calculate">Calcular</string>
    <string name="text_result_one">é</string>
    <string name="divide_by_zero">Não é possível realizar divisão por zero</string>
    <string name="btn_clean">Limpar</string>
    <string name="btn_save_imc_history">Salvar resultado</string>
    <string name="btn_back_home">Voltar</string>
    <string name="description_logo">logitpo meu imc</string>
    <string name="required_field">Preencha este campo</string>
    <string name="error_data_height">Altura inválida</string>
    <string name="error_data_weight">Peso inválido</string>

    <string-array name="result_message">
        <item>Abaixo do peso</item>
        <item>Peso normal</item>
        <item>Levemente acima do peso</item>
        <item>Obsidade grau 1</item>
        <item>Obsidade grau 2</item>
        <item>Obsidade grau 3</item>
    </string-array>
</resources>