<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.ResultActivity">

    <ImageView
        android:id="@+id/imageViewResult"
        style="@style/imageview_logo"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_two" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aladin"
        android:text="@string/text_result_one"
        android:textAlignment="viewStart"
        android:textColor="@color/teal_100"
        android:textSize="66sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtIMC"
        app:layout_constraintEnd_toStartOf="@+id/txtIMC"
        app:layout_constraintTop_toTopOf="@+id/txtIMC"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtIMC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aladin"
        android:text="25,44"
        android:textColor="@color/teal_100"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewResult"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="@+id/imageViewResult"
        app:layout_constraintTop_toBottomOf="@+id/imageViewResult" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtIMC"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtIMC" />

    <Button
        android:id="@+id/btnSaveRegistryIMC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_save_imc_history"
        app:layout_constraintEnd_toEndOf="@+id/txtResultado"
        app:layout_constraintStart_toStartOf="@+id/txtResultado"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <Button
        android:id="@+id/btnBackHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btn_back_home"
        app:layout_constraintEnd_toEndOf="@+id/btnSaveRegistryIMC"
        app:layout_constraintStart_toStartOf="@+id/btnSaveRegistryIMC"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveRegistryIMC" />


</androidx.constraintlayout.widget.ConstraintLayout>